--- a/style.css
+++ b/style.css
@@ -24,13 +24,15 @@ body {
 #calculator {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-around;
     width: 400px;
     height: 600px;
-    background-color: gray;
+    background-color: darkgray;
+    border-color: dimgray;
     border-style: solid;
-    gap: 10px;
-    padding: 10px;
+    /* gap: 10px; */
+    /* padding: 10px; */
     margin: 0;
 }
 
@@ -38,12 +40,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
-    height: 25%;
+    flex: 1 1 0%;
     border-style: solid;
     background-color: yellowgreen;
     border-color: darkgreen;
     text-align: right;
+    padding: 0px 10px;
+    margin: 10px 10px 0px 10px;
 }
 
 #answer-display {
@@ -56,20 +59,37 @@ body {
     font-size: 36px;
 }
 
+#operator-display {
+    height: 10%;
+}
+
 #keys {
-    height: 75%;
-    width: 100%;
+    display: flex;
+    flex: 3 1 0%;
+    flex-wrap: wrap;
+    padding: 10px;
+    /* background-color: red; */
 }
 
 .key {
-    height: 20%;
+    flex-shrink: 1;
+    height: auto;
     width: 25%;
     border-radius: 5px;
+    font-size: 48px;
+    font-weight: bold;
 }
 
 .key.number {
     background-color: lightgray;
 }
+
+.key.operator {
+    background-color: rebeccapurple;
+    color: white;
+}
+
+
 
 .key.wide {
     width: 50%;
